# ImageToAsciiConverter

./: CMakeLists.txt  Image.cpp  ImageParser.cpp  Makefile  README.md  main.cpp
include/: ASCIIConverterConstants.h  Image.h  ImageParser.h
